tests/baselines/reference/parserStrictMode3-negative.errors.txt
tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode3-negative.ts(1,1): error TS2630: Cannot assign to 'eval' because it is a function.


==== tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode3-negative.ts (1 errors) ====
    eval = 1;
    ~~~~
!!! error TS2630: Cannot assign to 'eval' because it is a function.